manifest/istio-configurations/grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-ui
spec:
  hosts:
  - "grafana.internal.sipasta.rpksus.xyz"
  gateways:
  - sipasta-gateway
  http:
    - route:
      - destination:
          host: grafana.istio-system.svc.cluster.local
          port:
            number: 3000
