manifest/istio-configurations/sipasta-backend-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sipasta-backend
spec:
  hosts:
  - "api.sipasta.rpksus.xyz"
  gateways:
  - sipasta-gateway
  http:
    - route:
      - destination:
          host: sipasta-backend.default.svc.cluster.local
          port:
            number: 8080
