manifest/istio-configurations/sipasta-ui-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sipasta-ui
spec:
  hosts:
  - "sipasta.rpksus.xyz"
  gateways:
  - sipasta-gateway
  http:
    - route:
      - destination:
          host: sipasta-ui.default.svc.cluster.local
          port:
            number: 3000
